[package]
name = "memproxy"
version = "0.0.1"
authors = ["jgarzik"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
actix-rt = "^0.2.2"
actix-web = "^1.0.0"
futures = "0.1.25"
env_logger = "0.5"
bytes = "0.4"
clap = "^2.33.0"
reqwest = "^0.9.20"
memcache = "^0.13.1"

[[bin]]
name = "memproxy"
path = "src/main.rs"

[[bin]]
name = "tester"
path = "src/tester.rs"

